// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `Array []`;

exports[`2- add  1`] = `
Array [
  "foo",
]
`;

exports[`3- add  1`] = `
Array [
  "foo",
  "bar",
]
`;

exports[`4- add  1`] = `
Array [
  "foo",
  "bar",
  "baz",
]
`;

exports[`4- remove  1`] = `
Array [
  "foo",
  "baz",
]
`;

exports[`5- remove  1`] = `
Array [
  "baz",
]
`;

exports[`6- remove  1`] = `Array []`;

exports[`7- add  1`] = `
Array [
  "bar",
  "baz",
]
`;

exports[`8- reset  1`] = `Array []`;

exports[`9- add  1`] = `
Array [
  "bar",
  "baz",
]
`;

exports[`10- add  1`] = `
Array [
  "bar",
  "baz",
]
`;

exports[`11- delete queue finish  1`] = `Array []`;

exports[`12- upload queue set   1`] = `Array []`;

exports[`13- path select 1`] = `Array []`;

exports[`14- project select 1`] = `Array []`;

exports[`15- log out 1`] = `Array []`;
